# srt-iot-ms

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  flash.py  main.py  pyproject.toml  receiver.py  relay.py  requirements.txt  sensors.py  transmitter.py
.github/workflows/: deployment.yaml
hardware/: main  run.sh
hardware-sim/: Makefile  main  main.c
hardware-sim/private/: reader.c  sender.c  sensors.c
hardware-sim/public/: reader.h  receiver.h  sensors.h
hardware/private/: reader.c  receiver.c  sender.c
hardware/public/: reader.h  receiver.h  sender.h  sensors.h
iot/: app.py  auth.py  client.py  flash.py  main.py  moderator.py  parser.py  publisher.py  receiver.py  relay.py  requirements.txt  sensors.py  session_coordinator.py  session_dispatcher.py  subscriber.py  transmitter.py
iot/redis/: .env  publisher.py  reader.py
iot/redis_handler/: publisher.py
iot/session/: coordinator.py  dispatcher.py  emitter.py  receiver.py  sensors.py  session_coordinator.py  session_dispatcher.py  thing.py  transmitter.py
iot/utils/: parser.py
tests/: redis_client.py  redis_subscriber.py  test.py  test_parser.py
