[tool.poetry]
name = "iot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.3"
Flask = "^2.1.2"
python-dotenv = "^0.20.0"
redis = "^4.3.1"
requests = "^2.27.1"
hjson = "^3.0.2"
waitress = "^2.1.2"
socketio = "^0.2.1"
python-socketio = { extras = ["client"], version = "^5.6.0" }

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
